MTTO. Se modifica el retorno del fichero de versiones a la web incluyendo los datos del PROXY

--- a/U5kManServer/U5kManServer.csproj
+++ b/U5kManServer/U5kManServer.csproj
@@ -333,6 +333,9 @@
     <None Include="RMON-MIB">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="SipProxyPBXVersions.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="versiones.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
