FtpClient y ProxyService (con sus test)

--- a/U5kManServer/U5kManServer.csproj
+++ b/U5kManServer/U5kManServer.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Services\PresenceDataService.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Services\ProxyService.cs" />
     <Compile Include="WebAppServer\MainStandbySyncServer.cs" />
     <Compile Include="Services\PabxItfService.cs" />
     <Compile Include="Procesos\BaseCode.cs" />
