MTTO. Se añade a la clase ProxyService una interfaz standar de eventos.

--- a/U5kManServer/NLog.config
+++ b/U5kManServer/NLog.config
@@ -91,7 +91,8 @@
     <!--<logger name="SupervisedItem" levels="Trace" writeTo="file,console" />-->
     <!--<logger name="TopSnmpExplorer" levels="Trace,Info" writeTo="file,console" />-->
     <!--<logger name="GwExplorer" levels="Debug,Info" writeTo="file,console" />-->
-    <logger name="PabxItfService" minlevel="Trace" writeTo="file,console" />
+    <!--<logger name="PabxItfService" minlevel="Trace" writeTo="file,console" />-->
+    <logger name="ProxyService" minlevel="Trace" writeTo="dbg,file,console" />
     <!--<logger name="sem-hist" minlevel="Info" writeTo="dbg" />-->
   </rules>
 </nlog>
