--- a/Pruebas/UnitTesting/packages.config
+++ b/Pruebas/UnitTesting/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="WebSocket4Net" version="0.14.1" targetFramework="net461" />
 </packages>
