--- a/Pruebas/TestingOnConsole/TestingOnConsole.csproj
+++ b/Pruebas/TestingOnConsole/TestingOnConsole.csproj
@@ -60,7 +60,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RxNetInAction.cs" />
+    <Compile Include="RxNetInActionClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
