262. RQF-28. Se pone configurable el tiempo de Inactividad. Se dan 4 opciones 5, 15, 30 y 60 minutos

--- a/U5kManServer/app.config
+++ b/U5kManServer/app.config
@@ -406,6 +406,9 @@
       <setting name="HaySactaProxy" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="WebInactivityTimeout" serializeAs="String">
+        <value>30</value>
+      </setting>
     </U5kManServer.Properties.u5kManServer>
   </userSettings>
 
