--- a/U5kManServer/Properties/u5kManServer.settings
+++ b/U5kManServer/Properties/u5kManServer.settings
@@ -367,5 +367,8 @@
     <Setting Name="GwsDatesAreUtc" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="WebInactivityTimeout" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
