262. RQF-29. Se impleenta en la pantalla de LOGIN, un visualizador dinamico de las alarmas pendientes de reconocer en el sistema

--- a/U5kManServer/NLog.config
+++ b/U5kManServer/NLog.config
@@ -92,6 +92,6 @@
     <!--<logger name="TopSnmpExplorer" levels="Trace,Info" writeTo="file,console" />-->
     <!--<logger name="GwExplorer" levels="Debug,Info" writeTo="file,console" />-->
     <!--<logger name="PabxItfService" minlevel="Trace" writeTo="file,console" />-->
-    <!--<logger name="sem-hist" minlevel="Info" writeTo="dbg" />-->
+    <logger name="WebServerBase" minlevel="Trace" writeTo="dbg" />
   </rules>
 </nlog>
